<resources>
    <string name="app_name">Event_Management_Admin</string>
    <string name="club_name">Inner Wheel Club of Vasco-Da-Gama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_login">Admin Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="not_an_admin">not an admin? </string>
    <string name="register_here"> Register</string>
    <string name="forgot_password">forgot password?</string>
    <string name="swipe_for_judge">Swipe to login as a judge</string>
    <string name="judge_login">Judge Login</string>
    <string name="judge_code_instruction">Enter the unique code provided to you by the admin.</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="swipe_for_admin">Swipe to login as an admin</string>
    <string name="admin_register">Admin Register</string>
    <string name="name">Name</string>
    <string name="admin_key">Admin Key</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_an_admin">Already an Admin?</string>
    <string name="login_here">Login</string>
    <string name="register">register</string>
    <string name="dummy_name">Hi, Admin</string>
    <string name="profile">profile</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="past_events">Past events</string>
    <string name="dummy_competition_name">Art Competition</string>
    <string name="dummy_date">17th December, 2020</string>
    <string name="dummy_genre">Drawing</string>
    <string name="desc">desc</string>
    <string name="add_new_event">Add new event</string>
    <string name="new_event">New Event</string>
    <string name="event_name">Event Name</string>
    <string name="date_of_event">Date of Event</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="genre_desc">Event genre(drawing, dance, etc)</string>
    <string name="participation_fees">Participation fees</string>
    <string name="first_position">First Position</string>
    <string name="second_position">Second Position</string>
    <string name="third_position">Third Position</string>
    <string name="next">Next</string>
    <string name="start">start</string>
    <string name="dummy_start_time">8:30 AM</string>
    <string name="end">end</string>
    <string name="dummy_end_time">12:30 PM</string>
    <string name="group_divisions">Group Divisions</string>
    <string name="number_of_divisions">Number of Divisions</string>
    <string name="create_divisions">create divisions</string>
    <string name="judges_instructions">Judges Instructions</string>
    <string name="dummy_instructions">The rulesof the competition are as following:\n1. lorem ipsum\n2. Lorem ipsum\n3. Lorem ipsum</string>
    <string name="rewards">Rewards</string>
    <string name="dummy_fees">Rs500</string>
    <string name="dummy_prize">First Prize Rs 1000</string>
    <string name="divisions">Divisions</string>
    <string name="create_event">Create Event</string>
    <string name="dummy_div_name">Ages 8 - 12</string>
    <string name="start_age">start age</string>
    <string name="end_age">end age</string>
    <string name="topic_for_this_division">Topic for this division</string>
    <string name="remove_group">Remove Group</string>
    <string name="confirm_and_save">Confirm and Save</string>
    <string name="rs_8967">Rs 8967</string>
    <string name="results">Results</string>
    <string name="age_grp_1">Division 1</string>
    <string name="first_place">First Place</string>
    <string name="nipun_aggarwal">Nipun Aggrawal</string>
    <string name="rs_1000">Rs 1000</string>
    <string name="second_place">Second Place</string>
    <string name="harsh_nigam">Harsh Nigam</string>
    <string name="entries">Entries</string>
    <string name="save_and_confirm">Save and Confirm</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="group_instruction">Groups can be added now or later in the Edit Event option.</string>
    <string name="hi_judge">Hi, Judge</string>
    <string name="edit_event">Edit Event</string>
    <string name="update">update</string>
    <string name="edit_divisions">Edit Divisions</string>
    <string name="add_divisions">Add Division</string>
    <string name="set_winners">Set Winners</string>
    <string name="provide_urls_for_the_winning_entries">Provide URLs for the winning entries.</string>
</resources>