<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="12dp"
    android:layout_height="109dp"
    android:layout_marginHorizontal="30dp">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardCornerRadius="15dp"
    android:elevation="12dp"
    android:id="@+id/event_card"
    app:cardBackgroundColor="@color/colorAccent"
    android:layout_height="96dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="105dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/dummy_competition_name"
            android:textColor="@color/white"
            android:id="@+id/event_name"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:text="@string/dummy_date"
            android:textColor="@color/white"
            android:id="@+id/event_date"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/dummy_genre"
            android:textColor="@color/white"
            android:id="@+id/event_genre"/>

    </LinearLayout>



</RelativeLayout>
</androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/rv_art"
        android:elevation="130dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/desc"
        android:layout_marginEnd="7dp"/>

</RelativeLayout>