<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activities.NewEventGroupDivision">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

               <ImageButton
            android:layout_width="17dp"
            android:layout_height="14dp"
            android:background="@drawable/ic_back"
            android:layout_marginTop="47dp"
            android:layout_marginStart="36dp"
            android:id="@+id/back_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/back_btn"
            android:id="@+id/comp_header"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingStart="30dp"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_competition_name"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_bold"
                    android:id="@+id/competition_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_genre"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/montserrat_extra_bold"
                    android:id="@+id/category"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="40dp"
                android:paddingTop="30dp"
                android:gravity="end"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_date"
                    android:id="@+id/date"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:textColor="@color/dark_grey"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="14sp"
                        android:layout_marginEnd="5dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_start_time"
                        android:id="@+id/start_time"
                        android:textColor="@color/dark_grey"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end"
                        android:textColor="@color/dark_grey"
                        android:fontFamily="@font/roboto_medium"
                        android:textSize="14sp"
                        android:layout_marginEnd="5dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_end_time"
                        android:id="@+id/end_time"
                        android:textColor="@color/dark_grey"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/dark_grey"
        android:layout_below="@id/comp_header"
        android:layout_marginTop="15dp"
        android:layout_marginStart="36dp"
        android:text="@string/judges_instructions"
        android:id="@+id/instructions_header"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:text="@string/dummy_instructions"
            android:layout_below="@id/instructions_header"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:id="@+id/competition_instructions_field"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/dark_grey"
            android:layout_below="@id/competition_instructions_field"
            android:layout_marginTop="20dp"
            android:layout_marginStart="36dp"
            android:text="@string/participation_fees"
            android:id="@+id/fees_header"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_below="@id/competition_instructions_field"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="36dp"
            android:text="@string/dummy_fees"
            android:id="@+id/competition_fees"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_below="@id/fees_header"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/prize_container">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:text="@string/dummy_prize"
                android:id="@+id/first_prize_text"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:text="@string/dummy_prize"
                android:id="@+id/second_prize_text"
                android:layout_marginTop="10dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:text="@string/dummy_prize"
                android:id="@+id/third_prize_text"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        
        <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_toEndOf="@id/prize_container"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/fees_header"
            android:src="@drawable/ic_trophy"
            android:layout_marginTop="30dp"
            android:id="@+id/trophy"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/dark_grey"
            android:layout_below="@id/trophy"
            android:layout_marginTop="20dp"
            android:layout_marginStart="36dp"
            android:text="@string/divisions"
            android:id="@+id/groups_header"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/final_divisions_rv"
            android:layout_below="@id/groups_header"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_below="@id/final_divisions_rv"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/create_event"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:id="@+id/create_event_btn"/>

        




    </RelativeLayout>

</ScrollView>