<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:id="@+id/main_page"
        android:layout_above="@id/swiper"
        android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:fontFamily="@font/montserrat_extra_bold"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="50dp"
            android:id="@+id/email_layout"
            android:hint="@string/email_id"
            android:textColorHint="@color/grey"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeColor="@color/input_text_field_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/email_field"
                android:maxLines="1"
                android:textSize="17sp"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:id="@+id/password_layout"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/grey"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeColor="@color/input_text_field_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password_field"
                android:maxLines="1"
                android:textSize="17sp"
                android:background="@color/white"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/login"
            android:layout_marginTop="35dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/roboto_regular"
            android:textSize="17sp"
            android:textAllCaps="false"
            app:cornerRadius="30dp"
            style="@style/TextAppearance.MaterialComponents.Button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_an_admin"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/register_here"
                android:id="@+id/login_to_register"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swiper"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:background="@drawable/admin_login_swipe_bg">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:text="@string/swipe_for_judge"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="17sp" />
        
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_bi_arrow_up_left"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:id="@+id/right_arrow_icon"/>
    </RelativeLayout>

    </RelativeLayout>
</FrameLayout>